--- a/TCAdminCrons.csproj
+++ b/TCAdminCrons.csproj
@@ -196,7 +196,6 @@
         </Reference>
     </ItemGroup>
     <ItemGroup>
-        <Compile Include="Configuration\ConfigurationHelper.cs" />
         <Compile Include="Configuration\MinecraftCronConfiguration.cs" />
         <Compile Include="Controllers\CronsController.cs" />
         <Compile Include="Crons\GameUpdates\MinecraftBukkitUpdatesCron.cs" />
@@ -210,6 +209,7 @@
         <Compile Include="Models\Minecraft\Spigot\SpigotManifest.cs" />
         <Compile Include="Models\Minecraft\Vanilla\MinecraftVersionManifest.cs" />
         <Compile Include="Models\Minecraft\Vanilla\MinecraftVersionMetadata.cs" />
+        <Compile Include="Models\Objects\CronJob.cs" />
         <Compile Include="TCAdminCronsService.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="TcAdminCronJob.cs" />
@@ -224,10 +224,20 @@
       <Content Include="install.sql" />
       <Content Include="Module.json" />
       <Content Include="uninstall.sql" />
-      <Content Include="Views\TCAdminCrons.Controllers\Crons\Minecraft.cshtml" />
+      <Content Include="Views\TCAdminCrons.Controllers\Crons\BukkitConfiguration.cshtml" />
+      <Content Include="Views\TCAdminCrons.Controllers\Crons\Configuration.cshtml" />
+      <Content Include="Views\TCAdminCrons.Controllers\Crons\PaperConfiguration.cshtml" />
+      <Content Include="Views\TCAdminCrons.Controllers\Crons\SpigotConfiguration.cshtml" />
+      <Content Include="Views\TCAdminCrons.Controllers\Crons\VanillaConfiguration.cshtml" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Models\Minecraft" />
+    </ItemGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Alexr03.Common\Alexr03.Common.csproj">
+        <Project>{f51453a6-0fef-4649-b1a4-57647de4a9df}</Project>
+        <Name>Alexr03.Common</Name>
+      </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
     <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
