--- a/TCAdminCrons.csproj
+++ b/TCAdminCrons.csproj
@@ -36,8 +36,8 @@
           <HintPath>..\packages\FluentScheduler.5.3.0\lib\net40\FluentScheduler.dll</HintPath>
           <Private>True</Private>
         </Reference>
-        <Reference Include="Kendo.Mvc, Version=2020.2.617.545, Culture=neutral, PublicKeyToken=121fae78165ba3d4">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\Kendo.Mvc.dll</HintPath>
+        <Reference Include="Kendo.Mvc, Version=2020.3.915.545, Culture=neutral, PublicKeyToken=121fae78165ba3d4">
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\Kendo.Mvc.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Microsoft.CSharp" />
@@ -87,111 +87,107 @@
         </Reference>
         <Reference Include="System.Xml" />
         <Reference Include="TCAdmin.Basic, Version=1.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.Basic.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.Basic.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.DatabaseProviders.MySql, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.DatabaseProviders.MySql.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.DatabaseProviders.MySql.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.DatabaseProviders.Odbc, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.DatabaseProviders.Odbc.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.DatabaseProviders.Odbc.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.DatabaseProviders.SqLite, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.DatabaseProviders.SqLite.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.DatabaseProviders.SqLite.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.FtpServer.ModuleApi, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.FtpServer.ModuleApi.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.FtpServer.ModuleApi.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.GameHosting.ModuleApi, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.GameHosting.ModuleApi.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.GameHosting.ModuleApi.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.GameHosting.SDK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.GameHosting.SDK.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.GameHosting.SDK.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.GameHosting.SDK.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.GameHosting.SDK.Web.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.GameHosting.SDK.Web.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.GameHosting.SDK.Web.References, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.GameHosting.SDK.Web.References.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.GameHosting.SDK.Web.References.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.Helper, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.Helper.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.Helper.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.Interfaces, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.Interfaces.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.Interfaces.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.LogProviders.Text, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.LogProviders.Text.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.LogProviders.Text.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.SDK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.SDK.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.SDK.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.SDK.Language, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.SDK.Language.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.SDK.Language.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.SDK.TimeZones, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.SDK.TimeZones.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.SDK.TimeZones.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.SDK.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.SDK.Web.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.SDK.Web.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.SDK.Web.MVC, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.SDK.Web.MVC.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.SDK.Web.MVC.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.SDK.Web.References, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.SDK.Web.References.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.SDK.Web.References.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.Support.ModuleApi, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.Support.ModuleApi.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.Support.ModuleApi.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.Support.SDK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.Support.SDK.dll</HintPath>
-          <Private>True</Private>
-        </Reference>
-        <Reference Include="TCAdmin.Support.SDK.Web, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.Support.SDK.Web.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.Support.SDK.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.TaskScheduler.ModuleApi, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.TaskScheduler.ModuleApi.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.TaskScheduler.ModuleApi.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.TaskScheduler.SDK, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.TaskScheduler.SDK.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.TaskScheduler.SDK.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.Web.MVC, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.Web.MVC.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.Web.MVC.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.Web.MVC.Mods, Version=1.0.0.0, Culture=neutral, PublicKeyToken=2425aa97c0ce5627">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.Web.MVC.Mods.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.Web.MVC.Mods.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="TCAdmin.WebServer, Version=2.0.0.0, Culture=neutral, PublicKeyToken=336a280da999c339">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\TCAdmin.WebServer.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\TCAdmin.WebServer.dll</HintPath>
           <Private>True</Private>
         </Reference>
         <Reference Include="Telerik.Web.UI, Version=2012.3.1016.35, Culture=neutral, PublicKeyToken=121fae78165ba3d4">
-          <HintPath>..\packages\TCAdmin.2.0.156\lib\netstandard2.0\Telerik.Web.UI.dll</HintPath>
+          <HintPath>..\packages\TCAdmin.2.0.157.5-beta\lib\netstandard2.0\Telerik.Web.UI.dll</HintPath>
           <Private>True</Private>
         </Reference>
     </ItemGroup>
@@ -201,6 +197,7 @@
         <Compile Include="Crons\GameUpdates\MinecraftBukkitUpdatesCron.cs" />
         <Compile Include="Crons\GameUpdates\MinecraftPaperUpdatesCron.cs" />
         <Compile Include="Crons\GameUpdates\MinecraftSpigotUpdatesCron.cs" />
+        <Compile Include="Crons\GameUpdates\MinecraftVanillaSnapshotUpdatesCron.cs" />
         <Compile Include="Crons\GameUpdates\MinecraftVanillaUpdatesCron.cs" />
         <Compile Include="Globals.cs" />
         <Compile Include="Models\EGameUpdateType.cs" />
@@ -213,7 +210,6 @@
         <Compile Include="TCAdminCronsService.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="TcAdminCronJob.cs" />
-        <Compile Include="VariableReplacements.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="app.config" />
@@ -224,11 +220,8 @@
       <Content Include="install.sql" />
       <Content Include="Module.json" />
       <Content Include="uninstall.sql" />
-      <Content Include="Views\TCAdminCrons.Controllers\Crons\BukkitConfiguration.cshtml" />
       <Content Include="Views\TCAdminCrons.Controllers\Crons\Configuration.cshtml" />
-      <Content Include="Views\TCAdminCrons.Controllers\Crons\PaperConfiguration.cshtml" />
-      <Content Include="Views\TCAdminCrons.Controllers\Crons\SpigotConfiguration.cshtml" />
-      <Content Include="Views\TCAdminCrons.Controllers\Crons\VanillaConfiguration.cshtml" />
+      <Content Include="Views\TCAdminCrons.Controllers\Crons\MinecraftGameUpdate.cshtml" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Models\Minecraft" />
